All_Component_DX/force-app/main/default/objects/Route_Card__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the originating customer case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Route Cards</relationshipLabel>
    <relationshipName>Route_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>