All_Component_DX/force-app/main/default/objects/Route_Card__c/fields/Current_Stop__c.field-meta.xml
<CustomField>
    <fullName>Current_Stop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current stop in the route</description>
    <label>Current Stop</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Route Cards (Current Stop)</relationshipLabel>
    <relationshipName>Route_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>