All_Component_DX/force-app/main/default/objects/Route_Card__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the customer account that initiated the return</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Route Cards</relationshipLabel>
    <relationshipName>Route_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>