All_Component_DX/force-app/main/default/objects/Route_Card__c/fields/Next_Stop__c.field-meta.xml
<CustomField>
    <fullName>Next_Stop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Next step in the route</description>
    <label>Next Stop</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Route Cards</relationshipLabel>
    <relationshipName>Route_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>