All_Component_DX/force-app/main/default/objects/Route_Card__c/fields/RMA__c.field-meta.xml
<CustomField>
    <fullName>RMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the original return order (RMA)</description>
    <label>RMA</label>
    <referenceTo>RMA_Shipment_Order__c</referenceTo>
    <relationshipLabel>Route Cards</relationshipLabel>
    <relationshipName>Route_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>