All_Component_DX/force-app/main/default/objects/Route_Card__c/fields/RMA_Line__c.field-meta.xml
<CustomField>
    <fullName>RMA_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the original return order line (RMA Line)</description>
    <label>RMA Line</label>
    <referenceTo>RMA_Shipment_Line__c</referenceTo>
    <relationshipLabel>Route Cards</relationshipLabel>
    <relationshipName>Route_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>