All_Component_DX/force-app/main/default/objects/Route_Card__c/fields/Route_Type__c.field-meta.xml
<CustomField>
    <fullName>Route_Type__c</fullName>
    <description>Type of route. Inbound indicates product being returned for repair. Outbound indicates product being returned to customer after repair</description>
    <label>Route Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>