All_Component_DX/force-app/main/default/objects/Route_Card__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the supplier account that may perform the repair</description>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Route Cards (Supplier)</relationshipLabel>
    <relationshipName>Route_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>